# RayTracingDemo

./: CMakeLists.txt
src/: BVH.hpp  Bounds3.hpp  Intersection.hpp  Lights.hpp  Object.hpp  Ray.hpp  Scene.hpp  Triangles.hpp  main.cpp  material.hpp  utils.hpp
